bug: fixed overflow-x on mobile devices

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -20,11 +20,8 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
-  height: fit-content;
+  max-height: fit-content;
   width: 100%;
-}
-
-body {
   overflow-x: hidden;
 }
 
